# multi-connect

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md  setup.sh
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: connection.rs  connection_manager.rs  endpoint.rs  interface_logger.rs  lib.rs  messages.rs  packet_sorter.rs  packet_sorter_log.rs  path_latency.rs  router.rs  sequencer.rs  settings.rs  threaded_receiver.rs  threaded_sender.rs  tun_device.rs
crates/server/: Cargo.toml
crates/server/src/: connection_manager.rs  main.rs
dissector/: multi_connect_dissector.lua
examples/many-to-one/: client.json  server.json  setup.sh
examples/selectrive duplication/: selective_client.py  selective_client_json.py
test-environtments/host-to-netem/: client.json  server.json  setup.sh
