[package]
name = "common"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"]}
serde_bytes = "0.11.5"
bincode = "1.3.3"
anyhow = "1.0.75"
uuid =  { version = "1.4.1", features = [ "serde" , "v4"]}