[package]
name = "common"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"]}
serde_bytes = "0.11.5"
serde_json = "1.0.111"
bincode = "1.3.3"
anyhow = "1.0.75"
uuid =  { version = "1.4.1", features = [ "serde" , "v4"]}
smol = "1.3.0"
nix = { version = "0.27.1", features = ["ioctl", "net"] }
socket2 = "0.4.9"
futures = "0.3.28"
tokio-tun = "0.11.2"
async-compat = "0.2.3"
log = "0.4.20"
etherparse = "0.13.0"
pnet_datalink = "0.34.0"