[package]
name = "server"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1.3.0"
serde = { version = "1.0.136", features = ["derive"]}
serde_bytes = "0.11.5"
bincode = "1.3.3"
socket2 = "0.5.4"
anyhow = "1.0.75"
common = { path = "../common" }
futures = "0.3.28"
