[package]
name = "server"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1.3.0"
serde = { version = "1.0.136", features = ["derive"]}
serde_bytes = "0.11.5"
bincode = "1.3.3"
socket2 = "0.5.4"
anyhow = "1.0.75"
common = { path = "../common" }
futures = "0.3.28"
uuid =  { version = "1.4.1", features = [ "serde" , "v4"]}
etherparse = "0.13.0"

log = "0.4.20"
env_logger = "0.10.0"
async-compat = "0.2.3"
tokio-tun = "0.11.2"
clap = { version = "4.4.14", features = ["derive"] }